async toolbar/menus - imaginary editor from v4